feat: enterprise package generation rework